fix hero-heading & contact-z-index

--- a/css/second-message.css
+++ b/css/second-message.css
@@ -30,6 +30,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .hero-intro h1 {
@@ -296,6 +297,7 @@ canvas {
     flex-direction: column-reverse;
     justify-content: space-between;
     align-items: center;
+    z-index: 10;
 }
 
 .contact:hover {
